Add TapoModuleClicked